# FlipperForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-04-flipperforge-implementation.md
docs/superpowers/specs/: 2026-04-04-flipperforge-design.md
flipperforge/: __init__.py  cache.py  cli.py
flipperforge/deploy/: serial.py
flipperforge/engine/: compiler.py  linter.py  parser.py
flipperforge/mitre/: attack_data.json  mapper.py
flipperforge/templates/: loader.py
templates/credential-access/: wifi-passwords.yaml
templates/discovery/: network-scan.yaml  system-info.yaml
templates/execution/: reverse-shell.yaml
templates/exfiltration/: file-grab.yaml
templates/persistence/: scheduled-task.yaml
tests/: test_cache.py  test_cli.py  test_integration.py  test_library.py  test_loader.py  test_mitre.py  test_serial.py
tests/engine/: test_compiler.py  test_linter.py  test_parser.py
tests/fixtures/: test-template.yaml
